<resources>
    <string name="app_name">Ladyjek</string>

    <string name="title_activity_activity_login">Sign-In</string>
    <string name="title_activity_activity_register">Sign-Up</string>
    <string name="title_activity_activity_confirm">Review pesanan</string>
    <string name="title_activity_activity_rate">Rate Driver</string>
    <string name="action_settings">Setting</string>
    <string name="api_key">AIzaSyAJ6wF29SmwinrHoyJ-KjWwlZ3IFtVz0vY</string>
    <string name="api_key_edo">AIzaSyDYz9r1BDO7ZprULDFPwrQF9uaCGKC_lg4</string>
    <string name="api_key_richie">AIzaSyAD5yWM5-f3bzAPOBcwubWc-V8rmsrlGzI</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="payList">
        <item>Tunai</item>
        <item>Mandiri e-Cash</item>
        <item>XL Tunai</item>
    </string-array>
    <string name="title_activity_activity_transport">Masukan lokasi awal dan akhir</string>
    <string name="title_activity_change_location_rumah">Lokasi rumah</string>
    <string name="title_activity_change_location_kantor">Lokasi kantor</string>
    <string name="title_activity_personal_info">Informasi pribadi</string>
    <string name="title_activity_edit_password">Edit password</string>
    <string name="title_activity_cashless">Cashless</string>
    <string name="title_activity_mandiri">Mandiri e-Cash</string>
    <string name="title_activity_about">Tentang Ladyjek</string>
    <string name="title_activity_promo">Promo</string>
    <string name="title_activity_bantuan">Bantuan</string>

    <string name="lbl_register">Baru disini?</string>
    <string name="lbl_register2">Great Job!</string>
    <string name="lbl_login">Lets do this!</string>
    <string name="lbl_hp">Safety first!</string>
    <string name="lbl_konfirmasi">Terima kasih!</string>
    <string name="lbl_review">Estimasi waktu menunggu : <b> - </b></string>
    <string name="lbl_tracking">Kontak darurat</string>
    <string name="lbl_tracking_2">Anda sedang berjalan menuju tujuan</string>
    <string name="lbl_feedback">Terima kasih!</string>

    <string name="register">Daftar</string>
    <string name="register2"><u>Daftar saya</u></string>
    <string name="login">Masuk</string>
    <string name="hp"><u>Kirim kode verifikasi</u></string>
    <string name="konfirmasi"><u>Masuk</u></string>
    <string name="review"><u>Jemput</u></string>
    <string name="tracking"><u>Panggil bantuan</u></string>
    <string name="feedback">Selesai</string>
    <string name="pesan"><u>Pesan sekarang</u></string>
    <string name="simpan"><u>Simpan</u></string>
    <string name="lanjut"><u>Lanjut</u></string>
    <string name="verify"><u>Verifikasi nomor</u></string>

    <string-array name="nav_drawer_labels">
        <item>Informasi Pribadi</item>
        <item>Riwayat Transaksi</item>
        <item>Cashless</item>
        <item>Promo</item>
        <item>Inbox</item>
        <item>Tentang LadyJek</item>
        <item>Bantuan</item>
    </string-array>

    <string name="GothamBook">fonts/Gotham.ttf</string>
    <string name="GothamRndBold">fonts/GothamRnd-Bold.otf</string>
    <string name="GothamRndMedium">fonts/GothamRnd-Medium.otf</string>
    <string name="GothamRndIta">fonts/GothamRnd-BookIta.otf</string>
    <string name="GothamRndMediumIta">fonts/GothamRnd-MediumIta.otf</string>
    <string name="topup">
        <![CDATA[
            <p><b>Cara Top-up saldo</b></p>
            <br/>
            <p><u>A. Melalui Mandiri ATM</u></p>
            <br/>
              <p>1. Masukkan Mandiri Debit ke Mandiri ATM</p>
              <p>2. Pilih menu uang elektronik</p>
              <p>3. Pilih menu mandiri e-cash</p>
              <p>4. Pilih menu isi ulang</p>
              <p>5. Masukkan nomor ponsel</p>
              <p>6. Masukkan nominal isi ulang</p>
            <br>
            <p><u>B. Melalui Mandiri SMS</u></p>
            <br/>
              <p>1. Akses *141*6#</p>
              <p>2. Pilih menu transfer</p>
              <p>3. Pilih menu e-cash</p>
              <p>4. Masukkan nomor ponsel</p>
              <p>5. Masukkan nominal isi ulang</p>
            <br>
            <p><u>C. Melalui Mandiri Internet</u></p>
            <br/>
              <p>1. Login ke Mandiri Internet</p>
              <p>2. Pilih menu uang elektronik</p>
              <p>3. Pilih menu mandiri e-cash</p>
              <p>4. Pilih menu isi ulang</p>
              <p>5. Masukkan nomor ponsel</p>
              <p>6. Masukkan nominal isi ulang</p>
            <br>
            <p><u>D. Melalui Mandiri Clickpay</u></p>
            <br/>
              <p>1. Login ke Aplikasi Mandiri e-cash</p>
              <p>2. Pilih menu isi e-cash</p>
              <p>3. Isi nomor Mandiri kartu debit</p>
              <p>4. Masukkan nomor ponsel</p>
              <p>5. Masukkan nominal isi ulang</p>
            <br>
            <p><u>E. Melalui Transfer Bank lain</u></p>
            <br/>
              <p>1. Akses e-channel bank lain</p>
              <p>2. Transfer ke bank Mandiri (008)</p>
              <p>3. Masukkan nomor rekening tujuan dengan format "80+nomor handphone"</p>
              <p>4. Masukkan nominal isi ulang</p>
              <br>
            <p><u>F. Melalui Toko Ritel</u></p>
            <br/>
              <p>1. Datang ke toko yang telah bekerjasama</p>
              <p>2. Infokan nomor handphone yang akan diisikan</p>
              <p>3. Setorkan dana sebesar isi ulang</p>
            <br>

        ]]>
    </string>

    <string name="about_1">
        <![CDATA[
            <p><b>Ladyjek Indonesia</b></p>
            <br/>
            <p>Customer service : <b>+62 85959084701</b></p>
            <br/>
            <p>www.ladyjek.com</p>
        ]]>
    </string>

    <string name="about_2">
        <![CDATA[
            <p><b>Kantor Pusat</b></p>
            <br/>
            <p>88@Casablanca Office Tower A Suite 5-C<p>
            <p>Jl. Casablanca kav. 88</p>
            <p>Jakarta 12780</p>
            <br/>
            <p><b>Kantor Pendaftaran</b></p>
            <br/>
            <p><b>Ladyjek Cengkareng</b></p>
            <p>Kawasan Ruko Sedayu Square Blok G-35</p>
            <p>Jl. Outer Ring Road Cengkareng</p>
            <p>Jakarta Barat 11730</p>
            <br/>
            <p><b>Ladyjek Bekasi</b></p>
            <p>Jl. Raya Burangrang no. 208B</p>
            <p>Kayuringinjaya</p>
            <p>Bekasi 17144</p>
            <br/>
            <p><b>Ladyjek Tangerang</b></p>
            <p>Kawasan Ruko Fluorite no. 72</p>
            <p>Jl. Raya Kelapa Gading Utara, Gading Serpong</p>
            <p>Tangerang 15810</p>

        ]]>
    </string>
    <string name="title_activity_activity_promo_web_view">ActivityPromoWebView</string>
    <string name="hint1"><i>isi detail lokasi tempat penjemputan anda</i></string>
    <string name="hello_world">Hello world!</string>

    </resources>
