<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true" android:focusableInTouchMode="true"
    tools:context="ladyjek.twiscode.com.ladyjek.Activity.ActivityTransport"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                class="com.google.android.gms.maps.SupportMapFragment" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_color">
                <TextView
                    android:id="@+id/txtEstimate"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/lbl_tracking_2"
                    android:textColor="@color/bg_grad_2"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/wrapperRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/plain_gradient_bg_btn"
                android:padding="20dp">

                <TextView
                    android:id="@+id/txtLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/lbl_tracking"
                    android:textColor="@color/white_color"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtLabel"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/btnEmergency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/tracking"
                        android:textColor="@color/white_color"
                        android:textSize="18dp"

                        />

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="38dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="-8dp"
                        android:layout_toRightOf="@id/btnEmergency"
                        android:src="@drawable/right_arrow_white" />
                </RelativeLayout>

            </RelativeLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
