<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@color/white_color"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:padding="5dp"
                    android:id="@+id/btnBack"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/back_pink"/>
                <TextView
                    android:layout_toRightOf="@id/btnBack"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_cashless"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/bg_grad_2"
                    android:layout_centerVertical="true"
                    android:textAllCaps="true"
                    fontPath="@string/GothamRndBold"
                    />
            </RelativeLayout>

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">
                    <LinearLayout
                        android:id="@+id/btnMandiri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RelativeLayout
                            android:layout_width="36dp"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/current"
                                android:layout_centerInParent="true"/>
                        </RelativeLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_marginLeft="5dp"
                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="40dp"
                                    android:textSize="16dp"
                                    android:textStyle="bold"
                                    android:textColor="@color/black_color"
                                    android:text="Mandiri e-Cash"
                                    android:gravity="center_vertical"
                                    fontPath="@string/GothamRndMedium"
                                    />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/txtMandiri"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14dp"
                                android:text="08711111111"
                                />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/btnXL"
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">
                        <RelativeLayout
                            android:layout_width="36dp"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/destination"
                                android:layout_centerInParent="true"/>
                        </RelativeLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_marginLeft="5dp"
                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="40dp"
                                    android:layout_weight="1"
                                    android:textSize="16dp"
                                    android:textStyle="bold"
                                    android:textColor="@color/black_color"
                                    android:text="xL Tunai"
                                    android:gravity="center_vertical"
                                    fontPath="@string/GothamRndMedium"
                                    />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/txtXL"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14dp"
                                android:text="belum terpasang"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

        </ScrollView>
    </LinearLayout>

</RelativeLayout>
